--- a/styles.css
+++ b/styles.css
@@ -116,3 +116,49 @@
     margin-top: 50px;
     margin-bottom: 50px;
 }
+
+.eventh1{
+    text-align: center;
+    margin-top: 40px;
+    color: firebrick;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.testih1{
+    text-align: center;
+    margin-top: 40px;
+    color: firebrick;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.testimonials{
+    display: flex;
+    justify-content: space-around;
+    color: rgb(255, 252, 252);
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 50px;
+}
+
+.testimony{
+    background-color: firebrick;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 400px;
+    height: 150px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.newsletter{
+    display: grid;
+    justify-content: center;
+    background-color: rgb(248, 248, 248);
+    padding: 40px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
