--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-    width: 400px;
+    width: 300px;
     height: 400px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -170,7 +170,7 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
-    background-color: brown;
+    background-color: firebrick;
     padding: 20px;
     border-radius: 10px;
 }
@@ -212,4 +212,32 @@
 .newssubmit:hover{
     background-color: rgb(240, 218, 24);
     transition: 0.3s;
+}
+
+.ourstaff{
+    text-align: center;
+}
+
+.staffmembers{
+    display: flex;
+    justify-content: center;
+}
+
+.staffmember{
+    margin: 40px;
+    padding: 10px;
+    background-color: firebrick;
+    width: 400px;
+    height: 500px;
+    color: white;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.staffimg{
+    width: 300px;
+    height: 300px;
 }
